    upstream version to avoid conflicting with the previous orig.tar.gz.
    The previous orig.tar.gz was a tarball that contained the upstream
    tarball, which had to be unpacked prior to build in debian/rules.
  * Switch to dpkg-source 3.0 (quilt) format from dpatch, which is
    deprecated.  (Closes: #875644)
  * Add myself to Uploaders.

 -- dann frazier <dannf@debian.org>  Tue, 12 Sep 2017 15:45:03 -0600

lmbench (3.0-a9-1.3) unstable; urgency=medium

  * Non-maintainer upload.
  * Add XS-Autobuild: yes after getting the package whitelisted for
    autobuilding.  (Closes: #717243)

 -- Andreas Beckmann <anbe@debian.org>  Sun, 09 Oct 2016 20:59:51 +0200

lmbench (3.0-a9-1.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Add build-arch/build-indep targets.  (Closes: #822051)
  * Switch to debhelper compat level 5.  (Closes: #817567)

 -- Andreas Beckmann <anbe@debian.org>  Sun, 18 Sep 2016 02:12:05 +0200

lmbench (3.0-a9-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Do not ship /var/{run,tmp}/lmbench.  (Closes: #689897)
  * Add Homepage: http://www.bitmover.com/lmbench/
  * Fix typos.  (Closes: #626676, #697536, #707013)

 -- Andreas Beckmann <anbe@debian.org>  Wed, 28 Jan 2015 19:08:15 +0100

lmbench (3.0-a9-1) unstable; urgency=low

  * Update to latest upstream (3.0-a9).
  * Update to latest Standards-Version. 
  * Incorporate Ubuntu patch: depend on libc6-dev (LP: #246618)
  * Closes: bug#470279 -- replaced all uses of /usr/tmp with /var/tmp
  * Closes: bug#496427 -- removed risk of /tmp symlink attacks by moving
    all usage of /tmp to /var/tmp/lmbench

 -- Al Stone <ahs3@debian.org>  Sun, 22 Feb 2009 18:20:00 -0700

lmbench (3.0-a7-1) unstable; urgency=low

  * Update to latest upstream. 
  * Update to latest Standards-Version.

 -- Al Stone <ahs3@debian.org>  Sat, 21 Oct 2006 18:29:00 -0600

lmbench (3.0-a5-3) unstable; urgency=low

  * Closes: bug#358785 -- missing manpage causes dangling symlinks 