@@ -9,13 +9,6 @@
 # Uncomment this to turn on verbose mode. 
 #export DH_VERBOSE=1
 
-H_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH) 
-ifeq ($(H_ARCH),arm)
-OPTIMIZATION=-O0
-else
-OPTIMIZATION=-O
-endif
-
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
